Collapse fix

--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -4473,6 +4473,10 @@ textarea.form-control.is-invalid {
   overflow-x: hidden;
 }
 
+.collapse {
+  visibility: visible !important;
+}
+
 @media (prefers-reduced-motion: reduce) {
   .form-control::-webkit-file-upload-button {
     -webkit-transition: none;
