--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3444,5 +3444,8 @@
     overflow-x: auto;
   }
 }
+.collapse {
+  visibility: visible !important;
+}
 
 /*# sourceMappingURL=index.css.map */
